--- a/css/style.css
+++ b/css/style.css
@@ -3,14 +3,13 @@
 * This file contains the CSS for index.html
 */
 
-h5 {
-  padding-left: 175pt;
-  padding-right: 10pt;
-  padding-top: 10pt;
-}
-
 .mdl-layout__content {
   padding-left: 10pt;
   padding-right: 10pt;
   padding-top: 10pt;
+}
+
+img {
+  width: 175px;
+  height: 160px;
 }
